Wellcome Library => Wellcome Collection

--- a/src/Wellcome.Dds/Wellcome.Dds.Server/wwwroot/roleproviderlogin/index.html
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/wwwroot/roleproviderlogin/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Wellcome Library | Restricted Digital Content</title>
+	<title>Wellcome Collection | Restricted Digital Content</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 	<script>document.getElementsByTagName('html')[0].className += ' has-js';</script>
 	<link rel="stylesheet" href="./assets/sso-core.min.css">
@@ -129,8 +129,8 @@
 							<p><small>© 2020 Wellcome Trust</small></p>
 						</div><!-- /.column.two-thirds -->
 						<div class="column text-right wellcome-trust">
-							<a href="https://wellcomelibrary.org/" title="Visit the Wellcome Library"><img src="./images/wellcome-logo.png"
-								 alt="Wellcome Library" width="145" height="58"></a>
+							<a href="https://wellcomelibrary.org/" title="Visit the Wellcome Collection"><img src="./images/wellcome-logo.png"
+								 alt="Wellcome Collection" width="145" height="58"></a>
 						</div><!-- /.column -->
 					</div><!-- /.group.third -->
 				</div><!-- /.wrap -->
